--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,13 @@
 <body>
 
   <%- include('./partials/header') %>
+  <div class="container-fluid">
+    <%- include('./partials/indexProd') %>
 
-  <%- include('./partials/indexProd') %>
+    <%- include('./partials/sectionIndex') %>
 
-  <%- include('./partials/sectionIndex') %>
-
-  <%- include('./partials/boostrapUtilities') %>
-
+    <%- include('./partials/boostrapUtilities') %>
+  </div>
   <%- include('./partials/footer') %>
 
 </body>
