--- a/views/partials/sectionIndex.ejs
+++ b/views/partials/sectionIndex.ejs
@@ -5,14 +5,16 @@
     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center">
 
       <div class="indexProdDesc position-relative">
- 
-          <h4>¿Queres ver mas sobre mis proyectos?</h4>
-          <p>Me especializo en diferentes areas del diseño grafico como: diseño web, diseño institucional, diseño de packaging, diseño publicitario, diseño de stands y  señalética.  </p>
-     
+
+        <h5 class="boxTitle">¿Queres ver todos mis proyectos?</h5>
+        <p>Me especializo en diferentes areas del diseño gráfico como: diseño web, diseño institucional, diseño de
+          packaging, diseño publicitario, diseño de stands y señalética.</p>
+        <a href="#" class="button d-flex justify-content-center">Ver porfolio</a>
+
       </div>
 
       <div class="indexProdImg">
-        <img src="/images/prueba.jpg">
+        <img src="/images/porfolio.jpg">
       </div>
 
     </div>
