--- a/public/stylesheets/styleIndexProd.css
+++ b/public/stylesheets/styleIndexProd.css
@@ -1,5 +1,5 @@
 /* Producto */
-h4 {
+.boxTitle {
   color:white;
   text-transform:uppercase;
 }
@@ -14,7 +14,7 @@ h4 {
   height: 90%;
   background-color: #ADDBA7;
   left:60px;
-  top:5%;
+  top:8%;
 }
 
 .indexProdImg {
@@ -27,4 +27,12 @@ h4 {
   object-fit: cover;
 }
 
+.button, .button:hover {
+  color:white;
+  text-decoration: none;
+  background-color: black;
+  padding: 2%;
+  text-transform: uppercase;
+  font-size: 0.9em;
+}
 
