--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,15 @@
 
   <%- include('./partials/header') %>
   <div class="container-fluid">
+
+    <%- include('./partials/indexBanner') %>
+
     <%- include('./partials/indexProd') %>
 
     <%- include('./partials/sectionIndex') %>
 
     <%- include('./partials/boostrapUtilities') %>
+    
   </div>
   <%- include('./partials/footer') %>
 
