--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,4 +17,5 @@
   <link rel='stylesheet' href='/stylesheets/styleFooter.css'/>
   <link rel='stylesheet' href='/stylesheets/styleIndex.css'/>
   <link rel='stylesheet' href='/stylesheets/styleIndexProd.css'/>
+  <link rel='stylesheet' href='/stylesheets/styleIndexPresentation.css'/>
 </head>
