--- a/views/partials/indexProd.ejs
+++ b/views/partials/indexProd.ejs
@@ -1,6 +1,32 @@
 <div class="cointainer-fluid containerSection">
 
-  <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center">
+
+    <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-3 colSection d-flex justify-content-center">
+
+      <div class="card">
+        <div class="ImagenCard04 d-flex justify-content-center">
+          <a href="#" class="text align-self-center">Logos, folletos, tarjetas y accesorios</a>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title">Diseño Empresarial</h5>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-3 colSection d-flex justify-content-center">
+
+      <div class="card">
+        <div class="ImagenCard02 d-flex justify-content-center">
+          <a href="#" class="text align-self-center">Revistas, libros y discos</a>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h5 class="card-title">Diseño editorial</h5>
+        </div>
+      </div>
+
+    </div>
 
     <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-3 colSection d-flex justify-content-center">
 
@@ -18,19 +44,6 @@
     <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-3 colSection d-flex justify-content-center">
 
       <div class="card">
-        <div class="ImagenCard02 d-flex justify-content-center">
-          <a href="#" class="text align-self-center">Revistas,libros y discos</a>
-        </div>
-        <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title">Diseño editorial</h5>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-3 colSection d-flex justify-content-center">
-
-      <div class="card">
         <div class="ImagenCard03 d-flex justify-content-center">
           <a href="#" class="text align-self-center">Stands y señalética</a>
         </div>
@@ -40,6 +53,8 @@
       </div>
 
     </div>
+
+    
 
 
   </div>
