--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
-  <div class="cointainer-fluid containerHeader">
-
-    <div class="row rowHeader d-flex justify-content-end">
+<div class="cointainer-fluid containerHeader">
+  
+  <div class="row rowHeader d-flex justify-content-end">
+    
+       <a href="#" id="logoIndex"></a>
 
       <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 rowNavegador">
 
