--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,9 +9,9 @@
         <div class="p-2 footer-link"><a class="footer-link" href="#">Política de Privacidad</a></div>
         <div class="ml-auto p-2">
           <div>
-            <a href="#" class="footer-link"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/claraviscontidg/" class="footer-link"><i class="fab fa-facebook"></i></a>
             <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="footer-link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/mariaclaravisconti/" class="footer-link"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </div>
