--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   
   <div class="row rowHeader d-flex justify-content-end">
     
-       <a href="#" id="logoIndex"></a>
+       <a href="/" id="logoIndex"></a>
 
       <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 rowNavegador">
 
@@ -18,30 +18,30 @@
             <ul class="navbar-nav">
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" href="/">Inicio</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
+                <a class="nav-link" href="/projects">Proyectos</a>
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link" href="/services" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
                   Servicios
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Editorial</a>
-                  <a class="dropdown-item" href="#">Marcas</a>
-                  <a class="dropdown-item" href="#">Packaging</a>
-                  <a class="dropdown-item" href="#">Señalética</a>
-                  <a class="dropdown-item" href="#">Stands</a>
-                  <a class="dropdown-item" href="#">Web</a>
+                  <a class="dropdown-item" href="/services">Editorial</a>
+                  <a class="dropdown-item" href="/services">Marcas</a>
+                  <a class="dropdown-item" href="/services">Packaging</a>
+                  <a class="dropdown-item" href="/services">Señalética</a>
+                  <a class="dropdown-item" href="/services">Stands</a>
+                  <a class="dropdown-item" href="/services">Web</a>
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="/contact">Contacto</a>
               </li>
 
             </ul>
