--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,6 +5,7 @@
   <%- include('./partials/header') %>
   <div class="container-fluid">
 
+    <%- include('./partials/formulariocontacto') %>
 
     <%- include('./partials/boostrapUtilities') %>
 
