--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,4 +18,5 @@
   <link rel='stylesheet' href='/stylesheets/styleIndex.css'/>
   <link rel='stylesheet' href='/stylesheets/styleIndexProd.css'/>
   <link rel='stylesheet' href='/stylesheets/styleIndexPresentation.css'/>
+  <link rel='stylesheet' href='/stylesheets/styleContact.css'/>
 </head>
