--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="/services" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
                   Servicios
                 </a>
@@ -48,7 +48,7 @@
 
             <form class="form-inline">
               <input class="formHeader" type="search" placeholder="Buscar..." aria-label="Search">
-              <button type="submit"><i class="fas fa-search"></i></button>
+              <button id="buttonSearch" type="submit"><i class="fas fa-search"></i></button>
             </form>
           </div>
 
