--- a/views/partials/formulariocontacto.ejs
+++ b/views/partials/formulariocontacto.ejs
@@ -3,22 +3,33 @@
     <div class="row">
 
         <div class="col-xs-6 col-sm-6 col-md-12 col-lg-6 col-xl-6 d-flex justify-content-center">
-
-            bla
-            bla
-            bla
+            <ul>
+                <li><i class="fa fa-user"></i> Maria Clara Visconti </li>
+                <li><i class="fa fa-phone"></i> 54 (11) 5494-6262</li>
+                <li><i class="fa fa-envelope"></i> claravisconti@hotmail.com </li>
+            </ul>
         </div>
 
         <div class="col-xs-6 col-sm-6 col-md-12 col-lg-6 col-xl-6">
 
-            <form action="/" method="POST">
+            <h3>Contacto</h3>
+
+            <form action="contact/send" method="POST">
 
                 <div class="">
                     <input type="text" name="nombre" class="" placeholder="Nombre" required>
                 </div>
 
                 <div class="">
+                    <input type="text" name="empresa" class="" placeholder="Empresa">
+                </div>
+
+                <div class="">
                     <input type="email" name="email" class="" placeholder="Correo" required>
+                </div>
+
+                <div class="">
+                    <input type="text" name="telefono" class="" placeholder="Telefono">
                 </div>
 
                 <div class="">
