--- a/public/stylesheets/styleContact.css
+++ b/public/stylesheets/styleContact.css
@@ -1,8 +1,59 @@
+.rowContact {
+    margin-bottom: 3%;
+}
+
+.contactForm {
+    padding: 7%;
+    border-radius: 6px;
+}
+
+.colContact {
+    border-radius: 4px;
+    color:black;
+    padding: 3%;
+}
+
+.ulContact {
+    list-style: none; 
+    padding: 0;
+    margin: 0;
+}
+
+.ulContact li {
+    padding: 5px;
+}
+
+.contactForm input[type=text],.contactForm input[type=email], textarea {
+    width:100%;
+    padding: 1.2%;
+    margin: 1.8%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;   
+}
+
 #buttonContact {
  margin-left: 2px;
  font-size: 1.1em;
- background-color: #53918A;
+ background-color:  #69B5AC;
  color:white;
  border: none;
- border-radius: 5%;
+ border-radius: 7px;
+ width:100%;
+ padding: 1%;
+}
+
+#buttonContact:hover {
+    background-color: #53918A;
+}
+
+.contact-link:link, .contact-link:active, .contact-link:visited {
+    color:white;
+    font-size: 1.8em;
+    text-decoration: none;
+    margin: 0 5px;
+ }
+
+ .imgContact {
+     max-height: 300px;
 }
