--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,6 +7,8 @@
 
     <%- include('./partials/formulariocontacto') %>
 
+    <%- include('./partials/chat') %>
+
     <%- include('./partials/boostrapUtilities') %>
 
   </div>
