--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
 
     <%- include('./partials/sectionIndex') %>
 
+    <%- include('./partials/chat') %>
+
     <%- include('./partials/boostrapUtilities') %>
     
   </div>
