--- a/views/services.ejs
+++ b/views/services.ejs
@@ -5,6 +5,8 @@
   <%- include('./partials/header') %>
   <div class="container-fluid">
 
+    <%- include('./partials/chat') %>
+
     <%- include('./partials/boostrapUtilities') %>
 
   </div>
