--- a/public/stylesheets/styleGeneral.css
+++ b/public/stylesheets/styleGeneral.css
@@ -9,12 +9,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
-  color:white;
-}
-
 .row, .container-fluid {
   margin:0px;
   padding:0px;
 }
 
+#iconoMain {
+  position: fixed;
+  right: 26px;
+  bottom: 20px;
+  max-width: 60px;
+  z-index: 2;
+} 
