--- a/views/partials/boostrapUtilities.ejs
+++ b/views/partials/boostrapUtilities.ejs
@@ -1,5 +1,10 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <a target="_blank" href="https://web.whatsapp.com/send?phone=5491154946262">
+    <img id="iconoMain" src="/images/wapp.gif">
+  </a>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
