--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,20 +4,32 @@
 
     <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-12">
 
-      <div class="d-flex hola">
-        <div class="p-2 footer-link"><a class="footer-link" href="#">Términos de Uso</a></div>
-        <div class="p-2 footer-link"><a class="footer-link" href="#">Política de Privacidad</a></div>
-        <div class="ml-auto p-2">
-          <div>
-            <a href="https://www.facebook.com/claraviscontidg/" class="footer-link"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/mariaclaravisconti/" class="footer-link"><i class="fab fa-linkedin"></i></a>
+      <div class="d-flex justify-content-center">
+        <div class="align-self-center">
+          <a href="https://www.facebook.com/claraviscontidg/" class="footer-link"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/mariaclaravisconti/" class="footer-link"><i
+            class="fab fa-linkedin"></i></a>
           </div>
-        </div>
+          <div class="p-2 footer-link"><a class="footer-link" href="#">Términos de Uso</a></div>
+          <div class="p-2 footer-link"><a class="footer-link" href="#">Política de Privacidad</a></div>
       </div>
-
     </div>
 
   </div>
 
 </div>
+
+</div>
+
+<!-- <div class="d-flex">
+  <div class="p-2 footer-link"><a class="footer-link" href="#">Términos de Uso</a></div>
+  <div class="p-2 footer-link"><a class="footer-link" href="#">Política de Privacidad</a></div>
+  <div class="ml-auto p-2">
+    <div>
+      <a href="https://www.facebook.com/claraviscontidg/" class="footer-link"><i class="fab fa-facebook"></i></a>
+      <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/mariaclaravisconti/" class="footer-link"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </div>
+</div> -->
