--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,6 +10,8 @@
           <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/mariaclaravisconti/" class="footer-link"><i
             class="fab fa-linkedin"></i></a>
+            <a href="mailto:claravisconti@hotmail.com" class="footer-link"><i
+              class="fa fa-envelope"></i></a>
           </div>
           <div class="p-2 footer-link"><a class="footer-link" href="#">Términos de Uso</a></div>
           <div class="p-2 footer-link"><a class="footer-link" href="#">Política de Privacidad</a></div>
