--- a/views/project.ejs
+++ b/views/project.ejs
@@ -4,6 +4,8 @@
 
   <%- include('./partials/header') %>
   <div class="container-fluid">
+
+  <%- include('./partials/projects') %>
     
   <%- include('./partials/boostrapUtilities') %>
     
