--- a/public/stylesheets/styleGeneral.css
+++ b/public/stylesheets/styleGeneral.css
@@ -9,6 +9,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .row, .container-fluid {
   margin:0px;
   padding:0px;
