--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,6 @@
 <html lang="es">
 
 <head>
-  <title>Clara Visconti</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,4 +18,5 @@
   <link rel='stylesheet' href='/stylesheets/styleIndexProd.css'/>
   <link rel='stylesheet' href='/stylesheets/styleIndexPresentation.css'/>
   <link rel='stylesheet' href='/stylesheets/styleContact.css'/>
+  <link rel='stylesheet' href='/stylesheets/styleProjects.css'/>
 </head>
