--- a/views/partials/sectionIndex.ejs
+++ b/views/partials/sectionIndex.ejs
@@ -9,7 +9,7 @@
         <h5 class="boxTitle">¿Queres ver todos mis proyectos?</h5>
         <p>Me especializo en diferentes areas del diseño gráfico como: diseño web, diseño institucional, diseño de
           packaging, diseño publicitario, diseño de stands y señalética.</p>
-        <a href="#" class="button d-flex justify-content-center">Ver porfolio</a>
+        <a href="/projects" class="button d-flex justify-content-center">Ver porfolio</a>
 
       </div>
 
