--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,10 +46,10 @@
 
             </ul>
 
-            <form class="form-inline">
-              <input class="formHeader" type="search" placeholder="Buscar..." aria-label="Search">
+            <!-- <form action="/search" method="GET" class="form-inline">
+              <input name="search" class="formHeader" type="search" placeholder="Buscar..." aria-label="search">
               <button id="buttonSearch" type="submit"><i class="fas fa-search"></i></button>
-            </form>
+            </form> -->
           </div>
 
         </nav>
