--- a/views/partials/indexProd.ejs
+++ b/views/partials/indexProd.ejs
@@ -6,10 +6,10 @@
 
       <div class="card">
         <div class="ImagenCard04 d-flex justify-content-center">
-          <a href="/services" class="text align-self-center">Logos, folletos, tarjetas y accesorios</a>
+          <a href="/projects/3" class="text align-self-center">Logos, folletos, tarjetas y accesorios</a>
         </div>
         <div class="card-body d-flex justify-content-center">
-          <h5 class="card-title">Diseño Empresarial</h5>
+          <h5 class="card-title">Diseño Institucional</h5>
         </div>
       </div>
 
@@ -19,7 +19,7 @@
 
       <div class="card">
         <div class="ImagenCard02 d-flex justify-content-center">
-          <a href="/services" class="text align-self-center">Revistas, libros y discos</a>
+          <a href="/projects/2" class="text align-self-center">Revistas, libros y discos</a>
         </div>
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title">Diseño editorial</h5>
@@ -32,7 +32,7 @@
 
       <div class="card">
         <div class="ImagenCard01 d-flex justify-content-center">
-          <a href="/services" class="text align-self-center">Envases, envoltorios, etiquetas y productos</a>
+          <a href="/projects/4" class="text align-self-center">Envases, envoltorios, etiquetas y productos</a>
         </div>
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title">Diseño de Packaging</h5>
@@ -45,7 +45,7 @@
 
       <div class="card">
         <div class="ImagenCard03 d-flex justify-content-center">
-          <a href="/services" class="text align-self-center">Stands y señalética</a>
+          <a href="/projects/1" class="text align-self-center">Stands y señalética</a>
         </div>
         <div class="card-body d-flex justify-content-center">
           <h5 class="card-title">Diseño Tridimensional</h5>
