--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -8,7 +8,7 @@
 
             <h3 class="titleProjects"><%=project.title%></h3>
             <p><%=project.description%></p>
-            <a href="#" class="buttonProjects d-flex justify-content-center">Consultame</a>
+            <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
         </div>
 
