--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -6,7 +6,7 @@
 
         <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
 
-            <h3 class="titleProjects">Diseno Editorial</h3>
+            <h3 class="titleProjects">Diseño Editorial</h3>
             <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
             <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
@@ -40,6 +40,184 @@
             </div>
         </div>
     </div>
+
+
+</div>
+
+<div class="container-fluid">
+
+    <!-- WEB -->
+
+    <div class="row d-flex justify-content-center rowHeadingPorjects">
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+
+            <h3 class="titleProjects">Diseño Web</h3>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+
+            <div class="divIamgen">
+                <img src="/images/web.jpg">
+            </div>
+        </div>
+
+    </div>
+
+    <!--proyectos-->
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+                
+                <% for(project of projects) { %>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                    <div class="card-body d-flex justify-content-center">
+                        <h5 class="card-title pt-2"><%=project.title%></h5>
+                    </div>
+                </div>
+                <% } %>
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+    <!-- PACKAGING -->
+
+    <div class="row d-flex justify-content-center rowHeadingPorjects">
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+
+            <h3 class="titleProjects">Diseño de Packaging</h3>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+
+            <div class="divIamgen">
+                <img src="/images/packaging.jpg">
+            </div>
+        </div>
+
+    </div>
+
+    <!--proyectos-->
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+                
+                <% for(project of projects) { %>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                    <div class="card-body d-flex justify-content-center">
+                        <h5 class="card-title pt-2"><%=project.title%></h5>
+                    </div>
+                </div>
+                <% } %>
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+<!-- MARCAS -->
+
+<div class="row d-flex justify-content-center rowHeadingPorjects">
+
+    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+
+        <h3 class="titleProjects">Diseño Institucional</h3>
+        <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+        <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+
+    </div>
+
+    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+
+        <div class="divIamgen">
+            <img src="/images/institucional.jpg">
+        </div>
+    </div>
+
+</div>
+
+<!--proyectos-->
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+            
+            <% for(project of projects) { %>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                <div class="card-body d-flex justify-content-center">
+                    <h5 class="card-title pt-2"><%=project.title%></h5>
+                </div>
+            </div>
+            <% } %>
+
+        </div>
+    </div>
+</div>
+
+
+</div>
+
+<!-- TRIDIMENCIONAL -->
+
+<div class="row d-flex justify-content-center rowHeadingPorjects">
+
+    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+
+        <h3 class="titleProjects">Diseño Publicitario</h3>
+        <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+        <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+
+    </div>
+
+    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+
+        <div class="divIamgen">
+            <img src="/images/publicidad.jpg">
+        </div>
+    </div>
+
+</div>
+
+<!--proyectos-->
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+            
+            <% for(project of projects) { %>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                <div class="card-body d-flex justify-content-center">
+                    <h5 class="card-title pt-2"><%=project.title%></h5>
+                </div>
+            </div>
+            <% } %>
+
+        </div>
+    </div>
+</div>
 
 
 </div>
