--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -193,7 +193,7 @@
     <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
 
         <div class="divIamgen">
-            <img src="/images/publicidad.jpg">
+            <img src="/images/pub.jpg">
         </div>
     </div>
 
