--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid marginContainerFull">
 
     <!-- EDITORIAL -->
 
@@ -7,12 +7,13 @@
         <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
 
             <h3 class="titleProjects">Diseño Editorial</h3>
-            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones
+                como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo. </p>
             <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
 
             <div class="divIamgen">
                 <img src="/images/editorial.jpg">
@@ -23,11 +24,11 @@
 
     <!--proyectos-->
 
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
-                
+
                 <% for(project of projects) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
@@ -44,7 +45,7 @@
 
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid marginContainerFull">
 
     <!-- WEB -->
 
@@ -53,7 +54,8 @@
         <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
 
             <h3 class="titleProjects">Diseño Web</h3>
-            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones
+                como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
             <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
         </div>
@@ -69,11 +71,11 @@
 
     <!--proyectos-->
 
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
-                
+
                 <% for(project of projects) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
@@ -90,6 +92,8 @@
 
 </div>
 
+<div class="container-fluid marginContainerFull">
+
     <!-- PACKAGING -->
 
     <div class="row d-flex justify-content-center rowHeadingPorjects">
@@ -97,7 +101,8 @@
         <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
 
             <h3 class="titleProjects">Diseño de Packaging</h3>
-            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones
+                como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
             <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
         </div>
@@ -113,11 +118,11 @@
 
     <!--proyectos-->
 
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
-                
+
                 <% for(project of projects) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
@@ -131,93 +136,97 @@
         </div>
     </div>
 
-
 </div>
 
-<!-- MARCAS -->
+<div class="container-fluid marginContainerFull">
 
-<div class="row d-flex justify-content-center rowHeadingPorjects">
+    <!-- MARCAS -->
 
-    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+    <div class="row d-flex justify-content-center rowHeadingPorjects">
 
-        <h3 class="titleProjects">Diseño Institucional</h3>
-        <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
-        <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
 
-    </div>
+            <h3 class="titleProjects">Diseño Institucional</h3>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones
+                como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
-    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
-
-        <div class="divIamgen">
-            <img src="/images/institucional.jpg">
         </div>
-    </div>
 
-</div>
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
 
-<!--proyectos-->
-
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
-            
-            <% for(project of projects) { %>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
-                <div class="card-body d-flex justify-content-center">
-                    <h5 class="card-title pt-2"><%=project.title%></h5>
-                </div>
+            <div class="divIamgen">
+                <img src="/images/institucional.jpg">
             </div>
-            <% } %>
-
         </div>
-    </div>
-</div>
-
-
-</div>
-
-<!-- TRIDIMENCIONAL -->
-
-<div class="row d-flex justify-content-center rowHeadingPorjects">
-
-    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
-
-        <h3 class="titleProjects">Diseño Publicitario</h3>
-        <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
-        <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
 
     </div>
 
-    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
-
-        <div class="divIamgen">
-            <img src="/images/pub.jpg">
-        </div>
-    </div>
-
-</div>
-
-<!--proyectos-->
+    <!--proyectos-->
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
-            
-            <% for(project of projects) { %>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
-                <div class="card-body d-flex justify-content-center">
-                    <h5 class="card-title pt-2"><%=project.title%></h5>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+
+                <% for(project of projects) { %>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                    <div class="card-body d-flex justify-content-center">
+                        <h5 class="card-title pt-2"><%=project.title%></h5>
+                    </div>
                 </div>
-            </div>
-            <% } %>
+                <% } %>
 
+            </div>
         </div>
     </div>
+
 </div>
+
+<div class="container-fluid marginContainerFull">
+
+    <!-- TRIDIMENCIONAL -->
+
+    <div class="row d-flex justify-content-center rowHeadingPorjects">
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 colTitleProjects">
+
+            <h3 class="titleProjects">Diseño Publicitario</h3>
+            <p>El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones
+                como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo.</p>
+            <a href="/contact" class="buttonProjects d-flex justify-content-center">Consultame</a>
+
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-4">
+
+            <div class="divIamgen">
+                <img src="/images/pub.jpg">
+            </div>
+        </div>
+
+    </div>
+
+    <!--proyectos-->
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
+
+                <% for(project of projects) { %>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
+                    <div class="card-body d-flex justify-content-center">
+                        <h5 class="card-title pt-2"><%=project.title%></h5>
+                    </div>
+                </div>
+                <% } %>
+
+            </div>
+        </div>
+    </div>
 
 
 </div>
