--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projects) { %>
+                <% for(project of projectsEditorial) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projects) { %>
+                <% for(project of projectsEditorial) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -123,7 +123,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projects) { %>
+                <% for(project of projectsEditorial) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -169,7 +169,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projects) { %>
+                <% for(project of projectsEditorial) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -186,7 +186,7 @@
 
 <div class="container-fluid marginContainerFull">
 
-    <!-- TRIDIMENCIONAL -->
+    <!-- PUBLICIDAD -->
 
     <div class="row d-flex justify-content-center rowHeadingPorjects">
 
@@ -215,7 +215,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projects) { %>
+                <% for(project of projectsPublicidad) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
