--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projectsEditorial) { %>
+                <% for(project of projectsWeb) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -123,7 +123,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projectsEditorial) { %>
+                <% for(project of projectsPackaging) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
@@ -169,7 +169,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center flex-wrap">
 
-                <% for(project of projectsEditorial) { %>
+                <% for(project of projectsMarcas) { %>
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/<%=project.images%>" alt="Card image cap">
                     <div class="card-body d-flex justify-content-center">
